Bug 962044 - Forward event loop lag messages via an observer. r=ted